tests/compile_fail/derive_bare_flags_name.rs
#[derive(ktstr::Scheduler)]
#[scheduler(name = "bad")]
#[allow(dead_code)]
enum Flags {}

fn main() {}
