tests/compile_fail/derive_bare_flags_name.stderr
error: enum name cannot be just "Flag" or "Flags"
 --> tests/compile_fail/derive_bare_flags_name.rs:4:6
  |
4 | enum Flags {}
  |      ^^^^^
